update: fixsomebug build fail

--- a/i18n/zh-CN/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh-CN/docusaurus-theme-classic/navbar.json
@@ -12,7 +12,7 @@
     "description": "Navbar item with label StudyNotes"
   },
   "item.label.ProjectDemo": {
-    "message": "项目demo",
+    "message": "项目案例",
     "description": "Navbar item with label ProjectDemo"
   },
   "item.label.Blog": {
